--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Nico Bast"
   avatar           : "portrait_head.png"
   bio              : "Developmental Neuroscientist & Childhood Psychotherapist"
-  location         : "Goethe University Frankfurt / Germany"
+  location         : "Frankfurt / Germany"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=nico+bast"
   googlescholar    : "https://scholar.google.de/citations?user=jFspCx8AAAAJ&hl=eng"
