--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=nico+bast"
   googlescholar    : "https://scholar.google.de/citations?user=jFspCx8AAAAJ&hl=eng"
-  email            : "nico.bast@kgu.de"
+  email            : "nbast@med.uni-frankfurt.de"
   researchgate     : "https://www.researchgate.net/profile/Nico-Bast"
   uri              :
   bitbucket        :
