added apps page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
   
   - title: "CV"
     url: /cv/
-
+    
+  - title: "Apps"
+    url: /apps/
+    
   # - title: "Guide"
   #   url: /markdown/
