--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,9 +7,6 @@ main:
   #   url: /talks/
   #
   
-  # - title: "Blog Posts"
-  #   url: /year-archive/
-  
   - title: "CV"
     url: /cv/
     
@@ -19,6 +16,8 @@ main:
   - title: "Teaching"
     url: /teaching/
   
-    
+  - title: "Blog Posts"
+    url: /year-archive/
+  
   # - title: "Guide"
   #   url: /markdown/
