--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@ main:
   - title: "Teaching"
     url: /teaching/
   
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Media"
+    url: /portfolio/
   
   # - title: "Guide"
   #   url: /markdown/
