--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
     url: /teaching/
   
   - title: "Media"
-    url: /portfolio/
+    url: /media/
   
   # - title: "Guide"
   #   url: /markdown/
