--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,9 @@ main:
   
   - title: "Media"
     url: /media/
+    
+  - title: "Media2"
+    url: /year_archive/
   
   # - title: "Guide"
   #   url: /markdown/
