--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
     url: /media/
     
   - title: "Media2"
-    url: /year_archive/
+    url: /year-archive/
   
   # - title: "Guide"
   #   url: /markdown/
